IVelan works now with any endian. Added gain to IVelan